--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
         />
       </div>
       <div class="signIn Inside Nav">
-        <span class="material-icons">perm_identity</span>
+        <span class="material-icons" onclick="goToSignIN()">perm_identity</span>
         <div class="navBar signin and signup">
           <div id="signUp" onclick="goToSignIN()">Sign In / Sign Up</div>
           <div id="ddl">
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="cart navigationinnerDiv">
-        <span class="material-icons">shopping_cart</span>
+        <span class="material-icons" > <a href="../html/cart.html">shopping_cart</span>
         <div class="navText">Cart</div>
       </div>
     </div>
@@ -251,6 +251,88 @@
         <div id="topDeals1"></div>
       </div>
     </div>
+
+    <!---------------- Footer Start  ------------------->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>MOST POPULAR CATEGORIES</h4>
+            <ul>
+              <li><a href="#">Staples</a></li>
+              <li><a href="#">Beverages</a></li>
+              <li><a href="#">Personal Care</a></li>
+              <li><a href="#">Home Care</a></li>
+              <li><a href="#">Fruits and Vegetables</a></li>
+              <li><a href="#">Baby Care</a></li>
+              <li><a href="#">Snacks & Branded Foods</a></li>
+              <li><a href="#">Dairy & Bakery</a></li>
+            </ul>
+          </div>
+          <div class="footer-col right">
+            <h4>CUSTOMER SERVICES</h4>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Service Policy</a></li>
+              <li><a href="#">E-waste Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-col right1">
+            <h4>CONTACT US</h4>
+            <p>
+              WhatsApp us:
+              <span style="display: inline-block"
+                ><a href="">86210 39926</a></span
+              >
+            </p>
+            <p>
+              Call Us :
+              <span style="display: inline-block"
+                ><a href="">1800 890 1222</a></span
+              >
+              <br />
+              8:00 AM to 8:00 PM, 365 days
+            </p>
+            <p>
+              Please note that you are accessing the BETA Version of
+              <a style="font-weight: 100" href="#">www.jiomart.com</a>
+            </p>
+            <p>
+              Should you encounter any bugs, glitches, lack of functionality,
+              delayed deliveries, billing errors or other problems on the beta
+              website, please email us on
+              <span><a href="cs@jiomart.com">cs@jiomart.com</a></span>
+            </p>
+            <h4>DOWNLOAD NOW</h4>
+            <a
+              href="https://play.google.com/store/apps/details?id=com.jpl.jiomart"
+              style="margin-right: 16px"
+              ><img
+                src="https://www.jiomart.com/images/cms/wysiwyg/app-icons/play_store.png"
+                alt="Download Jiomart App for Android from Play Store"
+            /></a>
+            <a href="https://apps.apple.com/in/app/jiomart/id1522085683"
+              ><img
+                src="https://www.jiomart.com/images/cms/wysiwyg/app-icons/ios_store.png"
+                alt="Download Jiomart App for iOs from App Store"
+            /></a>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <section class="bottom">
+        <div class="last">
+          <p>
+            Best viewed on Microsoft Edge 81+, Mozilla Firefox 75+, Safari
+            5.1.5+, Google Chrome 80+
+          </p>
+          <span>© 2021 All rights reserved. Reliance Retail Ltd.</span>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
 <script src="../js/index.js"></script>
