--- a/html/index.html
+++ b/html/index.html
@@ -246,9 +246,16 @@
 
       <!-- <.....MId section end....> -->
 
-      <div id="topDeals12">
+      <div >
         <h1>TOP DEALS</h1>
         <div id="topDeals1"></div>
+        <div id="bannerBotom">
+          <div><img src="https://www.jiomart.com/images/cms/aw_rbslider/slides/1666083460_fortune.jpg" alt=""> </div>
+          <div><img src="https://www.jiomart.com/images/cms/aw_rbslider/slides/1667908012_Spices_600x350.jpg" alt=""></div>
+          <div><img src="https://www.jiomart.com/images/cms/aw_rbslider/slides/1667457149_Atta_600x350.jpg" alt=""></div>
+          <div><img src="https://www.jiomart.com/images/cms/aw_rbslider/slides/1667473112_Organic-Range-for-Healthy-Diet-600-350.jpg" alt=""></div>
+          
+        </div>
       </div>
     </div>
 
