--- a/html/cart.html
+++ b/html/cart.html
@@ -1,92 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/cart.css" />
-  </head>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400;1,900&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"
-  />
-  <body>
-    <div id="navbar">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../css/cart.css" />
+</head>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400;1,900&display=swap"
+  rel="stylesheet" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+<body>
+  <div id="navbar">
+    <div>
+      <span class="material-icons menu">menu</span>
+    </div>
+    <div id="MainLogo">
       <div>
-        <span class="material-icons menu">menu</span>
-      </div>
-      <div id="MainLogo">
-        <div>
-          <a href="../html/index.html">
-            <img src="../image/shoply.jpg" alt="shoply" />
-          </a>
-        </div>
-      </div>
-      <div id="Search">
-        <input
-          type="text"
-          placeholder="Search essential, groceries, and more..."
-        />
-      </div>
-      <div class="signIn Inside Nav">
-        <span class="material-icons">perm_identity</span>
-        <div class="navBar signin and signup">
-          <div id="signUp" onclick="goToSignIN()">Sign In / Sign Up</div>
-          <div id="ddl">
-            <div id="in"></div>
-            <div id="ddl2"></div>
-          </div>
-        </div>
-      </div>
-      <div class="cart navigationinnerDiv">
-        <span class="material-icons">shopping_cart</span>
-        <div class="navText">Cart</div>
+        <a href="../html/index.html">
+          <img src="../image/shoply.jpg" alt="shoply" />
+        </a>
       </div>
     </div>
+    <div id="Search">
+      <input type="text" placeholder="Search essential, groceries, and more..." />
+    </div>
+    <div class="signIn Inside Nav">
+      <span class="material-icons">perm_identity</span>
+      <div class="navBar signin and signup">
+        <div id="signUp" onclick="goToSignIN()">Sign In / Sign Up</div>
+        <div id="ddl">
+          <div id="in"></div>
+          <div id="ddl2"></div>
+        </div>
+      </div>
+    </div>
+    <div class="cart navigationinnerDiv">
+      <span class="material-icons">shopping_cart</span>
+      <div class="navText">Cart</div>
+    </div>
+  </div>
 
-    <!--------------- OPTIOnal ----------------->
+  <!--------------- OPTIOnal ----------------->
 
-    <!--------------- OPTIOnal ----------------->
+  <!--------------- OPTIOnal ----------------->
 
-    <div id="headingCart" style="font-size: 40px">My Cart</div>
-    <div id="emptyCart" style="text-align: center">
+  <div id="headingCart" style="font-size: 40px;  text-align: center;">My Cart</div>
+  <div id="emptyCart" style="text-align: center">
+    <div>
+      <img height="200px" src="https://www.jiomart.com/msassets/images/emptycart.svg" alt="" />
+    </div>
+    <h5>Your Cart is empty!</h5>
+    <button onclick="addPro()">Add Products</button>
+  </div>
+  <div id="userProCont">
+    <div id="top"></div>
+    <div id="bot">
+      <h5 id="coupon">Apply Coupon</h5>
+      <input type="text" placeholder="Add Code Here" id="couponCode" />
+      <button onclick="checkCoupon()">Click Here to Apply Code</button>
+      <h3 id="payment">Payment Details</h3>
       <div>
-        <img
-          height="200px"
-          src="https://www.jiomart.com/msassets/images/emptycart.svg"
-          alt=""
-        />
+        MRP TOTAL: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="pRc"></span>
       </div>
-      <h5>Your Cart is empty!</h5>
-      <button onclick="addPro()">Add Products</button>
-    </div>
-    <div id="userProCont">
-      <div id="top"></div>
-      <div id="bot">
-        <h5 id="coupon">Apply Coupon</h5>
-        <input type="text" placeholder="Add Code Here" id="couponCode" />
-        <button onclick="checkCoupon()">Click Here to Apply Code</button>
-        <h3 id="payment">Payment Details</h3>
-        <div>
-          MRP TOTAL: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="pRc"></span>
-        </div>
-        <div>Product Discount <span id="dSc"></span></div>
-        <div>
-          Total Amount: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="tA"></span>
-        </div>
-        <input
-          type="number"
-          placeholder="Enter Your Number Here"
-          id="verifyNumber"
-        />
-        <button onclick="placeOrder()">Place Order</button>
+      <div>Product Discount <span id="dSc"></span></div>
+      <div>
+        Total Amount: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="tA"></span>
       </div>
+      <input type="number" placeholder="Enter Your Number Here" id="verifyNumber" />
+      <button onclick="placeOrder()">Place Order</button>
     </div>
-    <script src="../js/cart.js"></script>
-  </body>
+  </div>
+  <script src="../js/cart.js"></script>
+</body>
+
 </html>
